--- a/aspnet_tutorial/Views/Products/Details.cshtml
+++ b/aspnet_tutorial/Views/Products/Details.cshtml
@@ -5,39 +5,38 @@
     Layout = "~/Views/Templates/Default/default_layout.cshtml";
 }
 
-<h2>Details</h2>
+<div class="col-lg-12">
+<div class="panel panel-default">
+    <div class="panel-heading">Details</div>
+    <div>
+        <dl class="dl-horizontal">
+            <dt>
+                Category name :
+            </dt>
 
-<div>
-    <h4>product</h4>
-    <hr />
-    <dl class="dl-horizontal">
-        <dt>
-            @Html.DisplayNameFor(model => model.product_name)
-        </dt>
+            <dd>
+                @Html.DisplayFor(model => model.category.cat_name)
+            </dd>
+            <dt>
+               Product name :
+            </dt>
 
-        <dd>
-            @Html.DisplayFor(model => model.product_name)
-        </dd>
+            <dd>
+                @Html.DisplayFor(model => model.product_name)
+            </dd>
 
-        <dt>
-            @Html.DisplayNameFor(model => model.unit_price)
-        </dt>
+            <dt>
+                Unit price :
+            </dt>
 
-        <dd>
-            @Html.DisplayFor(model => model.unit_price)
-        </dd>
-
-        <dt>
-            @Html.DisplayNameFor(model => model.category.cat_name)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.category.cat_name)
-        </dd>
-
-    </dl>
+            <dd>
+                @Html.DisplayFor(model => model.unit_price)
+            </dd>
+        </dl>
+    </div>
 </div>
-<p>
-    @Html.ActionLink("Edit", "Edit", new { id = Model.product_id }) |
-    @Html.ActionLink("Back to List", "Index")
-</p>
+    </div>
+        <p>
+            @Html.ActionLink("Edit", "Edit", new { id = Model.product_id }) |
+            @Html.ActionLink("Back to List", "Index")
+        </p>
