--- a/aspnet_tutorial/Views/Products/Delete.cshtml
+++ b/aspnet_tutorial/Views/Products/Delete.cshtml
@@ -5,45 +5,50 @@
     Layout = "~/Views/Templates/Default/default_layout.cshtml";
 }
 
-<h2>Delete</h2>
+<div class="col-lg-12">
+    <div class="panel panel-default">
+        <div class="panel-heading">Delete a product</div>
+        <div class="panel-body">
+            <h4>Are you sure you want to delete this?</h4>
+            <hr />
+            <dl class="dl-horizontal">
+                <dt>
+                    Category name :
+                </dt>
 
-<h3>Are you sure you want to delete this?</h3>
-<div>
-    <h4>product</h4>
-    <hr />
-    <dl class="dl-horizontal">
-        <dt>
-            @Html.DisplayNameFor(model => model.product_name)
-        </dt>
+                <dd>
+                    @Html.DisplayFor(model => model.category.cat_name)
+                </dd>
 
-        <dd>
-            @Html.DisplayFor(model => model.product_name)
-        </dd>
+                <dt>
+                    Product name :
+                </dt>
 
-        <dt>
-            @Html.DisplayNameFor(model => model.unit_price)
-        </dt>
+                <dd>
+                    @Html.DisplayFor(model => model.product_name)
+                </dd>
 
-        <dd>
-            @Html.DisplayFor(model => model.unit_price)
-        </dd>
+                <dt>
+                    Unit price :
+                </dt>
 
-        <dt>
-            @Html.DisplayNameFor(model => model.category.cat_name)
-        </dt>
+                <dd>
+                    @Html.DisplayFor(model => model.unit_price)
+                </dd>
 
-        <dd>
-            @Html.DisplayFor(model => model.category.cat_name)
-        </dd>
 
-    </dl>
 
-    @using (Html.BeginForm()) {
-        @Html.AntiForgeryToken()
+            </dl>
 
-        <div class="form-actions no-color">
-            <input type="submit" value="Delete" class="btn btn-default" /> |
-            @Html.ActionLink("Back to List", "Index")
+            @using (Html.BeginForm())
+            {
+                @Html.AntiForgeryToken()
+
+                <div class="form-actions no-color">
+                    <input type="submit" value="Delete" class="btn btn-danger" /> |
+                    @Html.ActionLink("Back to List", "Index")
+                </div>
+            }
         </div>
-    }
+    </div>
 </div>
