--- a/aspnet_tutorial/Views/Users/Details.cshtml
+++ b/aspnet_tutorial/Views/Users/Details.cshtml
@@ -5,45 +5,42 @@
     Layout = "~/Views/Templates/Default/default_layout.cshtml";
 }
 
-<h2>Details</h2>
+<div class="col-lg-12">
+    <div class="panel panel-default">
+        <div class="panel-heading">Details</div>
+        <div class="panel-body">
+            <table>
+                <tbody>
+                    <tr>
+                        <td>
+                            Profile name :
+                        </td>
 
-<div>
-    <h4>user</h4>
-    <hr />
-    <dl class="dl-horizontal">
-        <dt>
-            @Html.DisplayNameFor(model => model.username)
-        </dt>
+                        <td>
+                            @Html.DisplayFor(model => model.profile.profile_name)
+                        </td>
+                    </tr>
+                    <tr>
+                        <td>
+                            Username :
+                        </td>
 
-        <dd>
-            @Html.DisplayFor(model => model.username)
-        </dd>
+                        <td>
+                            @Html.DisplayFor(model => model.username)
+                        </td>
+                    </tr>
+                    <tr>
+                        <td>
+                            Created at :
+                        </td>
 
-        <dt>
-            @Html.DisplayNameFor(model => model.pwd)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.pwd)
-        </dd>
-
-        <dt>
-            @Html.DisplayNameFor(model => model.created_at)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.created_at)
-        </dd>
-
-        <dt>
-            @Html.DisplayNameFor(model => model.profile.profile_name)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.profile.profile_name)
-        </dd>
-
-    </dl>
+                        <td>
+                            @Html.DisplayFor(model => model.created_at)
+                        </td>
+                    </tr>
+            </table>
+        </div>
+    </div>
 </div>
 <p>
     @Html.ActionLink("Edit", "Edit", new { id = Model.id_user }) |
