--- a/aspnet_tutorial/Views/Profiles/Edit.cshtml
+++ b/aspnet_tutorial/Views/Profiles/Edit.cshtml
@@ -5,39 +5,37 @@
     Layout = "~/Views/Templates/Default/default_layout.cshtml";
 }
 
-<h2>Edit</h2>
+<div class="col-lg-12">
+    <div class="panel panel-default">
+        <div class="panel-heading">User profile</div>
+        <div class="panel-body">
+            <div class="col-md-6">
 
+                @using (Html.BeginForm())
+                {
+                    @Html.AntiForgeryToken()
 
-@using (Html.BeginForm())
-{
-    @Html.AntiForgeryToken()
-    
-    <div class="form-horizontal">
-        <h4>profile</h4>
-        <hr />
-        @Html.ValidationSummary(true, "", new { @class = "text-danger" })
-        @Html.HiddenFor(model => model.profile_id)
+                    <div class="form-horizontal">
+                        <h4>Update user profile</h4>
+                        <hr />
+                        @Html.ValidationSummary(true, "", new { @class = "text-danger" })
+                        @Html.HiddenFor(model => model.profile_id)
 
-        <div class="form-group">
-            @Html.LabelFor(model => model.profile_name, htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                @Html.EditorFor(model => model.profile_name, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.profile_name, "", new { @class = "text-danger" })
-            </div>
-        </div>
-
-        <div class="form-group">
-            <div class="col-md-offset-2 col-md-10">
-                <input type="submit" value="Save" class="btn btn-default" />
+                        <div class="form-group">
+                            <label>Profile name</label>
+                            @Html.EditorFor(model => model.profile_name, new {htmlAttributes = new {@class = "form-control"}})
+                            @Html.ValidationMessageFor(model => model.profile_name, "", new {@class = "text-danger"})
+                        </div>
+                        
+                        <button type="submit" class="btn btn-primary">Save</button>
+                        <button type="reset" class="btn btn-default">Reset</button>
+                    </div>
+                }
             </div>
         </div>
     </div>
-}
+</div><!-- /.col-->
 
 <div>
     @Html.ActionLink("Back to List", "Index")
 </div>
-
-@section Scripts {
-    @Scripts.Render("~/bundles/jqueryval")
-}
