--- a/aspnet_tutorial/Views/Profiles/Create.cshtml
+++ b/aspnet_tutorial/Views/Profiles/Create.cshtml
@@ -5,32 +5,33 @@
     Layout = "~/Views/Templates/Default/default_layout.cshtml";
 }
 
-<h2>Create</h2>
+<div class="col-lg-12">
+    <div class="panel panel-default">
+        <div class="panel-heading">User profile</div>
+        <div class="panel-body">
+            <div class="col-md-6">
 
+                @using (Html.BeginForm())
+                {
+                    @Html.AntiForgeryToken()
 
-@using (Html.BeginForm()) 
-{
-    @Html.AntiForgeryToken()
-    
-    <div class="form-horizontal">
-        <h4>profile</h4>
-        <hr />
-        @Html.ValidationSummary(true, "", new { @class = "text-danger" })
-        <div class="form-group">
-            @Html.LabelFor(model => model.profile_name, htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                @Html.EditorFor(model => model.profile_name, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.profile_name, "", new { @class = "text-danger" })
-            </div>
-        </div>
-
-        <div class="form-group">
-            <div class="col-md-offset-2 col-md-10">
-                <input type="submit" value="Create" class="btn btn-default" />
+                    <div class="form-horizontal">
+                        <h4>Add a new user profile</h4>
+                        <hr />
+                        @Html.ValidationSummary(true, "", new { @class = "text-danger" })
+                        <div class="form-group">
+                            <label>Category name </label>
+                                @Html.EditorFor(model => model.profile_name, new { htmlAttributes = new { @class = "form-control" } })
+                                @Html.ValidationMessageFor(model => model.profile_name, "", new { @class = "text-danger" })
+                        </div>
+                        <button type="submit" class="btn btn-primary">Create</button>
+                        <button type="reset" class="btn btn-default">Reset</button>
+                    </div>
+                }
             </div>
         </div>
     </div>
-}
+</div><!-- /.col-->
 
 <div>
     @Html.ActionLink("Back to List", "Index")
