--- a/aspnet_tutorial/Views/Categories/Index.cshtml
+++ b/aspnet_tutorial/Views/Categories/Index.cshtml
@@ -26,14 +26,14 @@
     @foreach (var item in Model)
     {
         <tr>
-            <td>@Html.DisplayFor(modelIem => item.cat_id)</td>
+            <td>@Html.DisplayFor(modelIem => item.id)</td>
             <td>
                 @Html.DisplayFor(modelItem => item.cat_name)
             </td>
             <td>
-                @Html.ActionLink("Edit", "Edit", new {id = item.cat_id}) |
-                @Html.ActionLink("Details", "Details", new {id = item.cat_id}) |
-                @Html.ActionLink("Delete", "Delete", new {id = item.cat_id})
+                @Html.ActionLink("Edit", "Edit", new {id = item.id}) |
+                @Html.ActionLink("Details", "Details", new {id = item.id}) |
+                @Html.ActionLink("Delete", "Delete", new {id = item.id})
             </td>
         </tr>
     }
