--- a/aspnet_tutorial/Views/Products/Index.cshtml
+++ b/aspnet_tutorial/Views/Products/Index.cshtml
@@ -28,7 +28,7 @@
                     {
                         <tr>
                             <td>
-                                @Html.DisplayFor(modelItel =>item.product_id)
+                                @Html.DisplayFor(modelItel =>item.id)
                             </td>
                             <td>
                                 @Html.DisplayFor(modelItem => item.category.cat_name)
@@ -41,9 +41,9 @@
                             </td>
 
                             <td>
-                                @Html.ActionLink("Edit", "Edit", new {id = item.product_id}) |
-                                @Html.ActionLink("Details", "Details", new {id = item.product_id}) |
-                                @Html.ActionLink("Delete", "Delete", new {id = item.product_id})
+                                @Html.ActionLink("Edit", "Edit", new {id = item.id}) |
+                                @Html.ActionLink("Details", "Details", new {id = item.id}) |
+                                @Html.ActionLink("Delete", "Delete", new {id = item.id})
                             </td>
                         </tr>
                     }
