--- a/aspnet_tutorial/Views/Products/Create.cshtml
+++ b/aspnet_tutorial/Views/Products/Create.cshtml
@@ -22,8 +22,8 @@
                         @Html.ValidationSummary(true, "", new { @class = "text-danger" })
                         <div class="form-group">
                             <label>Category :</label>
-                            @Html.DropDownList("fk_cat_id", null, htmlAttributes: new {@class = "form-control"})
-                            @Html.ValidationMessageFor(model => model.fk_cat_id, "", new {@class = "text-danger"})
+                            @Html.DropDownList("category_id", null, htmlAttributes: new {@class = "form-control"})
+                            @Html.ValidationMessageFor(model => model.category_id, "", new {@class = "text-danger"})
                         </div>
 
                         <div class="form-group">
