--- a/aspnet_tutorial/Views/Products/Edit.cshtml
+++ b/aspnet_tutorial/Views/Products/Edit.cshtml
@@ -14,11 +14,11 @@
 {
     @Html.AntiForgeryToken()
         @Html.ValidationSummary(true, "", new { @class = "text-danger" })
-        @Html.HiddenFor(model => model.product_id)
+        @Html.HiddenFor(model => model.id)
 
     <div class="form-group">
-            @Html.DropDownList("fk_cat_id", null, htmlAttributes: new {@class = "form-control"})
-            @Html.ValidationMessageFor(model => model.fk_cat_id, "", new {@class = "text-danger"})
+            @Html.DropDownList("category_id", null, htmlAttributes: new {@class = "form-control"})
+            @Html.ValidationMessageFor(model => model.category_id, "", new {@class = "text-danger"})
     </div>
 
     <div class="form-group">
