--- a/aspnet_tutorial/Views/Customers/Create.cshtml
+++ b/aspnet_tutorial/Views/Customers/Create.cshtml
@@ -21,20 +21,26 @@
         @Html.ValidationSummary(true, "", new { @class = "text-danger" })
         <div class="form-group">
             <label> Name :</label>
-                @Html.EditorFor(model => model.name, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.name, "", new { @class = "text-danger" })
+            @Html.EditorFor(model => model.name, new { htmlAttributes = new { @class = "form-control" } })
+            @Html.ValidationMessageFor(model => model.name, "", new { @class = "text-danger" })
+        </div>
+
+        <div class="form-group">
+            <label>Email :</label>
+            @Html.EditorFor(model => model.email, new { htmlAttributes = new { @class = "form-control" } })
+            @Html.ValidationMessageFor(model => model.email, "", new { @class = "text-danger" })
         </div>
 
         <div class="form-group">
             <label>Tel :</label>
-                @Html.EditorFor(model => model.tel, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.tel, "", new { @class = "text-danger" })
+            @Html.EditorFor(model => model.tel, new { htmlAttributes = new { @class = "form-control" } })
+            @Html.ValidationMessageFor(model => model.tel, "", new { @class = "text-danger" })
         </div>
 
         <div class="form-group">
             <label>Address :</label>
-            @Html.EditorFor(model => model.address, new {htmlAttributes = new {@class = "form-control"}})
-            @Html.ValidationMessageFor(model => model.address, "", new {@class = "text-danger"})
+            @Html.EditorFor(model => model.address, new { htmlAttributes = new { @class = "form-control" } })
+            @Html.ValidationMessageFor(model => model.address, "", new { @class = "text-danger" })
         </div>
 
         <button type="submit" class="btn btn-primary">Create</button>
