--- a/aspnet_tutorial/Views/Orders/Index.cshtml
+++ b/aspnet_tutorial/Views/Orders/Index.cshtml
@@ -16,7 +16,7 @@
        data-sort-name="name" data-sort-order="desc">
     <thead>
     <tr>
-        <th data-sortable="true">Order id</th>
+        <th data-sortable="true">ID</th>
         <th data-sortable="true">Customer name</th>
         <th data-sortable="true">Product name</th>
         <th data-sortable="true">Qty</th>
@@ -28,7 +28,7 @@
                 <tbody>
                 @foreach (var item in Model) {
                         <tr>
-                        <td>@Html.DisplayFor(modelItem => item.order_id)</td>
+                        <td>@Html.DisplayFor(modelItem => item.id)</td>
                         <td>
                             @Html.DisplayFor(modelItem => item.customer.name)
                         </td>
@@ -43,9 +43,9 @@
                         </td>
 
                         <td>
-                            @Html.ActionLink("Edit", "Edit", new {id = item.order_id}) |
-                            @Html.ActionLink("Details", "Details", new {id = item.order_id}) |
-                            @Html.ActionLink("Delete", "Delete", new {id = item.order_id})
+                            @Html.ActionLink("Edit", "Edit", new {id = item.id}) |
+                            @Html.ActionLink("Details", "Details", new {id = item.id}) |
+                            @Html.ActionLink("Delete", "Delete", new {id = item.id})
                         </td>
                         </tr>
                 }
