--- a/aspnet_tutorial/Views/Users/Create.cshtml
+++ b/aspnet_tutorial/Views/Users/Create.cshtml
@@ -22,8 +22,8 @@
                         @Html.ValidationSummary(true, "", new { @class = "text-danger" })
                         <div class="form-group">
                             <label>Profile name</label>
-                            @Html.DropDownList("fk_profile_id", null, htmlAttributes: new { @class = "form-control" })
-                            @Html.ValidationMessageFor(model => model.fk_profile_id, "", new { @class = "text-danger" })
+                            @Html.DropDownList("profile_id", null, htmlAttributes: new { @class = "form-control" })
+                            @Html.ValidationMessageFor(model => model.profile_id, "", new { @class = "text-danger" })
                         </div>
 
                         <div class="form-group">
