--- a/aspnet_tutorial/Views/Users/Edit.cshtml
+++ b/aspnet_tutorial/Views/Users/Edit.cshtml
@@ -19,13 +19,13 @@
                         <h4>user</h4>
                         <hr />
                         @Html.ValidationSummary(true, "", new { @class = "text-danger" })
-                        @Html.HiddenFor(model => model.id_user)
+                        @Html.HiddenFor(model => model.id)
 
                         <div class="form-group">
-                            @Html.LabelFor(model => model.fk_profile_id, "fk_profile_id", htmlAttributes: new { @class = "control-label col-md-2" })
+                            @Html.LabelFor(model => model.profile_id, "profile_id", htmlAttributes: new { @class = "control-label col-md-2" })
                             <div class="col-md-10">
-                                @Html.DropDownList("fk_profile_id", null, htmlAttributes: new { @class = "form-control" })
-                                @Html.ValidationMessageFor(model => model.fk_profile_id, "", new { @class = "text-danger" })
+                                @Html.DropDownList("profile_id", null, htmlAttributes: new { @class = "form-control" })
+                                @Html.ValidationMessageFor(model => model.profile_id, "", new { @class = "text-danger" })
                             </div>
                         </div>
 
